terminamos la api , nos falta hacer las pruebas unitarias